--- a/a3.html
+++ b/a3.html
@@ -18,30 +18,7 @@
   <a href="javascript:void(0)" onclick="w3_close()" title="Close Sidemenu" 
   class="w3-bar-item w3-button w3-hide-large w3-large">Close <i class="fa fa-remove"></i></a>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-dark-grey w3-button w3-hover-black w3-left-align" onclick="document.getElementById('id01').style.display='block'">Share File <i class="w3-padding fa fa-pencil"></i></a>
-  <a id="myBtn" class="w3-bar-item w3-button"><i class="fa fa-inbox w3-margin-right"></i>Files (3)<i class="fa fa-caret-down w3-margin-left"></i></a>
-  <div id="Demo1" class="w3-hide w3-animate-left">
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="function()('File1');w3_close();" id="firstTab">
-      <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="./fileIcon3.png" style="width:15%;"><span class="w3-opacity w3-large">File 1</span>
-        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</h6>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-      </div>
-    </a>
-     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="doShare('File2');w3_close();">
-      <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="./fileIcon5.png" style="width:15%;"><span class="w3-opacity w3-large">File 2</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-      </div>
-    </a>
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="doShare('File3');w3_close();">
-      <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="./fileIcon2.png" style="width:15%;"><span class="w3-opacity w3-large">File 3</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-      </div>
-    </a>
-  </div>
-  <a href="#" class="w3-bar-item w3-button" onclick="openHome()"><i class="fa fa-cloud"></i> &nbsp;Cloud Share</a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-paper-plane w3-margin-right"></i>Shared Files</a>
+  <a href="#" class="w3-bar-item w3-button" onclick="openHome()"><i class="fa fa-cloud"></i> &nbsp;Cloud Share</a> 
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-hourglass-end w3-margin-right"></i>Draft Files</a>
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-trash w3-margin-right"></i>Trash</a>
 </nav>
@@ -291,6 +268,7 @@
 		<select>
 			<option>Creation Date</option>
 			<option>Size</option>
+			<option>Course</option>
 		</select>
 	</div>
 
@@ -307,88 +285,54 @@
 		</tr>
 		<!--table entries -->
 		<tr>
-			<td><img class="w3-round doc_browse_icons" onclick="doShare('File1')" src="./fileIcon3.png"><span class="icon_title">File 1</span></td>
-			<td>32kb</td>
-			<td>1/1/2020</td>
-			<td>2/2/2020</td>
-			<td><p class="email_contacts"><span>sampleEmail@gmail.com</span> <span>email2@gmail.com</span></p></td>
-			<td>InfoSys322</td>
-			<td> <a class="w3-button w3-blue" onclick="document.getElementById('previewPage').style.display='block'">Preview <i class="fa fa-sticky-note"></i> </a> 
+			<td onclick="document.getElementById('previewPage').style.display='block'"><img class="w3-round doc_browse_icons" onclick="doShare('File1')" src="./fileIcon3.png"><span class="icon_title">File 1</span></td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">32kb</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">1/1/2020</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">2/2/2020</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'"><p class="email_contacts"><span>sampleEmail@gmail.com</span> <span>email2@gmail.com</span></p></td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">InfoSys322</td>
+			<td> 
+			<a href="data:application/octet-stream;charset=utf-16le;base64,//5mAG8AbwAgAGIAYQByAAoA" class="w3-button w3-blue"><i class="fa fa-download"></i> </a>
 			<a class="w3-button w3-green" onclick="document.getElementById('permissionsPage').style.display='block'">Permissions <i class="fa fa-lock"></i> </a> 
-			<a class="w3-button w3-red" onclick="document.getElementById('deleteConfirm').style.display='block'">Delete <i class="fa fa-trash"></i> </a>
 			<a class="w3-button w3-yellow" onclick="document.getElementById('forumPage').style.display='block'">Forum <i class="fa fa-pencil"></i> </a>
 			<a class="w3-button w3-purple" onclick="document.getElementById('id01').style.display='block'">Share <i class="fa fa-paper-plane"></i> </a>
+			<a class="w3-button w3-red" onclick="document.getElementById('deleteConfirm').style.display='block'">Delete <i class="fa fa-trash"></i> </a>
 			</td>
 		</tr>
 		<tr>
-			<td><img class="w3-round doc_browse_icons" onclick="doShare('File2')" src="./fileIcon2.png"><span class="icon_title">File 2</span></td>
-			<td>142kb</td>
-			<td>1/1/2020</td>
-			<td>2/2/2020</td>
-			<td><p class="email_contacts"><span>sampleEmail@gmail.com</span></p></td>
-			<td>CompSci345</td>
-			<td> <a class="w3-button w3-blue" onclick="document.getElementById('previewPage').style.display='block'">Preview <i class="fa fa-sticky-note"></i> </a> 
+			<td onclick="document.getElementById('previewPage').style.display='block'"><img class="w3-round doc_browse_icons" onclick="doShare('File2')" src="./fileIcon2.png"><span class="icon_title">File 2</span></td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">142kb</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">1/1/2020</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">2/2/2020</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'"><p class="email_contacts"><span>sampleEmail@gmail.com</span></p></td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">CompSci345</td>
+			<td> 
+			<a href="data:application/octet-stream;charset=utf-16le;base64,//5mAG8AbwAgAGIAYQByAAoA" class="w3-button w3-blue"><i class="fa fa-download"></i> </a>
 			<a class="w3-button w3-green" onclick="document.getElementById('permissionsPage').style.display='block'">Permissions <i class="fa fa-lock"></i> </a> 
-			<a class="w3-button w3-red" onclick="document.getElementById('deleteConfirm').style.display='block'">Delete <i class="fa fa-trash"></i> </a>
 			<a class="w3-button w3-yellow" onclick="document.getElementById('forumPage').style.display='block'">Forum <i class="fa fa-pencil"></i> </a>
 			<a class="w3-button w3-purple" onclick="document.getElementById('id01').style.display='block'">Share <i class="fa fa-paper-plane"></i> </a>
+			<a class="w3-button w3-red" onclick="document.getElementById('deleteConfirm').style.display='block'">Delete <i class="fa fa-trash"></i> </a>
 			</td>
 		</tr>
 		<tr>
-			<td><img class="w3-round doc_browse_icons" onclick="doShare('File3')" src="./fileIcon5.png"><span class="icon_title">File 3</span></td>
-			<td>239kb</td>
-			<td>1/1/2020</td>
-			<td>2/2/2020</td>
-			<td><p class="email_contacts"><span>sampleEmail@gmail.com</span></p></td>
-			<td>CompSci210</td>
-			<td> <a class="w3-button w3-blue" onclick="document.getElementById('previewPage').style.display='block'">Preview <i class="fa fa-sticky-note"></i> </a> 
+			<td onclick="document.getElementById('previewPage').style.display='block'"><img class="w3-round doc_browse_icons" onclick="doShare('File3')" src="./fileIcon5.png"><span class="icon_title">File 3</span></td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">239kb</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">1/1/2020</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">2/2/2020</td>
+			<td onclick="document.getElementById('previewPage').style.display='block'"><p class="email_contacts"><span>sampleEmail@gmail.com</span></p></td>
+			<td onclick="document.getElementById('previewPage').style.display='block'">CompSci210</td>
+			<td>  
+			<a href="data:application/octet-stream;charset=utf-16le;base64,//5mAG8AbwAgAGIAYQByAAoA" class="w3-button w3-blue"><i class="fa fa-download"></i> </a>
 			<a class="w3-button w3-green" onclick="document.getElementById('permissionsPage').style.display='block'">Permissions <i class="fa fa-lock"></i> </a> 
-			<a class="w3-button w3-red" onclick="document.getElementById('deleteConfirm').style.display='block'">Delete <i class="fa fa-trash"></i> </a>
 			<a class="w3-button w3-yellow" onclick="document.getElementById('forumPage').style.display='block'">Forum <i class="fa fa-pencil"></i> </a>
 			<a class="w3-button w3-purple" onclick="document.getElementById('id01').style.display='block'">Share <i class="fa fa-paper-plane"></i> </a>
+			<a class="w3-button w3-red" onclick="document.getElementById('deleteConfirm').style.display='block'">Delete <i class="fa fa-trash"></i> </a>
 			</td>
 		</tr>
 		
 		
 		
 	</table>
-</div>
-
-
-<div id="File1" class="w3-container file">
-  <br>
-  <img class="w3-round  w3-animate-top" src="./fileIcon3.png" style="width:20%;">
-  <h5 class="w3-opacity">File 1</h5>
-  <h4><i class="fa fa-clock-o"></i> File 1, Sep 27, 2015.</h4>
-  <a class="w3-button w3-light-grey" href="#" onclick="document.getElementById('id01').style.display='block'">Share<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-light-grey" href="#">Delete<i class="w3-margin-left fa fa-arrow-right"></i></a>
-  <hr>
-  
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
- 
-</div>
-
-<div id="File2" class="w3-container file">
-  <br>
-  <img class="w3-round w3-animate-top" src="./fileIcon5.png" style="width:20%;">
-  <h5 class="w3-opacity">File 2</h5>
-  <h4><i class="fa fa-clock-o"></i> File 2, Sep 25, 2015.</h4>
-  <a class="w3-button w3-light-grey" onclick="document.getElementById('id01').style.display='block'">Share<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-light-grey">Delete<i class="w3-margin-left fa fa-arrow-right"></i></a>
-  <hr>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-</div>
-
-<div id="File3" class="w3-container file">
-  <br>
-  <img class="w3-round w3-animate-top" src="./fileIcon2.png" style="width:20%;">
-  <h5 class="w3-opacity">File 3</h5>
-  <h4><i class="fa fa-clock-o"></i> File 3, Sep 23, 2015.</h4>
-  <a class="w3-button w3-light-grey" onclick="document.getElementById('id01').style.display='block'">Share<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-light-grey">Delete<i class="w3-margin-left fa fa-arrow-right"></i></a>
-  <hr>
- 
 </div>
      
 </div>
